--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,46 +1,13 @@
 /* Scroll Bar */
 
-::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
-}
 
-::-webkit-scrollbar {
-  width: 8px;
-  background-color: #f5f5f5;
-}
 
-::-webkit-scrollbar-thumb {
-  background-color: rgba(66, 66, 66, 0.2);
-  border: 0px;
-  background-clip: padding-box;
-  border-radius: 5px;
-}
+
 
 /* nav {
   background-color: #232f3e;
   padding: 1rem 1rem;
 } */
-
-#search_btn {
-  background-color: #febd69;
-}
-
-.input-group {
-  width: 90%;
-  margin-right: 35%;
-}
-
-#search_field {
-  height: 2.4rem;
-  padding: 1rem;
-}
-
-#login_btn,
-#view_btn {
-  background-color: #febd69;
-  padding: 0.4rem 1.8rem;
-  font-family: calibri;
-}
 
 #cart {
   font-size: 1rem;
@@ -56,87 +23,11 @@
   font-size: 0.9rem;
 }
 
-/* Home page */
-#products_heading {
-  margin-top: 1.8rem;
-}
 
-.card {
-  height: 100%;
-}
 
-.card-title a {
-  color: #2e2e2e;
-}
 
-.card-title a:hover {
-  color: #48e5c2;
-  text-decoration: none;
-}
 
-.card-body {
-  padding-left: 0;
-}
 
-.card-text {
-  font-size: 1.4rem;
-}
-
-#view_btn {
-  background-color: #48e5c2;
-  color: white;
-}
-
-.card-img-top {
-  width: 200px;
-  height: 150px;
-}
-
-.ratings {
-  font-size: 1.2rem;
-  color: #fdcc0d;
-}
-
-#no_of_reviews {
-  font-size: 0.85rem;
-  color: grey;
-  margin-left: 0.5rem;
-}
-
-/* Footer */
-footer {
-  margin-top: 8rem;
-  color: grey;
-  bottom: 0;
-  width: 100%;
-}
-
-/* Ratings */
-
-.rating-outer {
-  display: inline-block;
-  position: relative;
-  font-family: FontAwesome;
-  color: #fdcc0d;
-}
-
-.rating-outer::before {
-  content: "\f006 \f006 \f006 \f006 \f006";
-}
-
-.rating-inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 0;
-}
-
-.rating-inner::before {
-  content: "\f005 \f005 \f005 \f005 \f005";
-  color: #f8ce0b;
-}
 
 /* Product Details Page */
 #product_id {
@@ -180,35 +71,7 @@ footer {
   margin-top: 9rem;
 }
 
-/* Loader */
-.loader {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20%;
-  width: 80px;
-  height: 80px;
-  padding-left: 0;
-}
-.loader:after {
-  content: " ";
-  display: block;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border-radius: 50%;
-  border: 6px solid #48e5c2;
-  border-color: #48e5c2 transparent;
-  animation: lds-dual-ring 1.2s linear infinite;
-}
-@keyframes lds-dual-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+/
 
 /* Cart */
 
@@ -556,17 +419,8 @@ ul.CTAs a {
   margin-bottom: 5px;
 }
 
-/* Products List Admin */
-#products_table .btn {
-  padding: 0.2rem 0.5rem;
-  margin-left: 0.4rem;
-}
 
-/* Dashboard */
 
-.card-font-size {
-  font-size: 1.5rem;
-}
 
 /* Reviews */
 
