--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -19,7 +19,6 @@ body {
     rgba(217, 241, 247, 1) 92%
   );
 
-  
   .navbar {
     position: fixed;
     width: 97.5%;
@@ -187,4 +186,34 @@ body {
       }
     }
   }
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 4px;
+  grid-row-gap: 5px;
+  padding: 20px;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+  border: 1px solid rgb(137, 130, 130);
+  padding: 9px;
+}
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+  border: 1px solid rgb(137, 130, 130);
+  padding: 9px;
+}
+.div3 {
+  grid-area: 2 / 1 / 3 / 2;
+  border: 1px solid rgb(137, 130, 130);
+  padding: 9px;
+}
+.div4 {
+  grid-area: 2 / 2 / 3 / 3;
+  border: 1px solid rgb(137, 130, 130);
+  padding: 9px;
 }
