--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -231,6 +231,9 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+.cartmain::-webkit-scrollbar {
+  display: none;
+}
 
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
